<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Motor_Error_State" Id="{eb5a977d-73c7-4ac6-8ecf-fd8c6a84ccc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Motor_Error_State :
(
	enum_member := 0
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>