<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Motor_State" Id="{746ba7c5-2e6e-47a8-b694-75707afa2bff}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Motor_State :
(
	enum_member := 0
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>